--- a/Diet_Health_Classification.ipynb
+++ b/Diet_Health_Classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOtUpZEnD9iLOta3aVkt+lQ",
+      "authorship_tag": "ABX9TyOFyoTdQHiF8qnNZnN9xD1a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,22 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/MassGH2023/Supervised-Machine-Learning-Classification/blob/main/Diet_Health_Classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Post-hoc refers to methods used to interpret the predictions of non-self-interpretable models after they have been trained. Since these models, like random forests or deep neural networks, do not provide clear insights into how they make decisions, post-hoc methods help us understand their outputs.\n",
+        "\n",
+        "Here are two common post-hoc methods:\n",
+        "\n",
+        "* LIME (Local Interpretable Model-agnostic Explanations): This technique approximates the complex model with a simpler, interpretable model in the vicinity of a specific prediction. It helps us see which features influenced that particular prediction.\n",
+        "* SHAP (SHapley Additive exPlanations): This method assigns each feature an importance value for a particular prediction, based on cooperative game theory. It helps us understand the contribution of each feature to the model's output.\n",
+        "\n",
+        "These methods are essential for gaining insights into complex models and ensuring their predictions can be understood and trusted."
+      ],
+      "metadata": {
+        "id": "IdJuI97VJoSt"
+      }
     },
     {
       "cell_type": "code",
@@ -53,12 +69,12 @@
       "metadata": {
         "id": "BsUXsUG7MVR6"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "JYlw5POzMLJw"
       },
@@ -77,7 +93,7 @@
       "metadata": {
         "id": "5eQzKHphMhMb"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -95,7 +111,7 @@
         "id": "bwPgm-HfMktD",
         "outputId": "cb122e05-104e-4533-f76f-39a2b4ad7bd2"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -654,7 +670,7 @@
         "id": "BvstuJ9oOMob",
         "outputId": "844f1802-c078-4085-c249-da968c6620ee"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -692,7 +708,7 @@
         },
         "outputId": "ac0990b2-9b11-4677-9102-888cc80d544e"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -921,7 +937,7 @@
       "metadata": {
         "id": "YC3QlXkM236g"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -937,7 +953,7 @@
           "height": 383
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1509,7 +1525,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1543,7 +1559,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1575,7 +1591,7 @@
           "height": 210
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1660,7 +1676,7 @@
           "height": 210
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1732,7 +1748,7 @@
       "metadata": {
         "id": "egs5DNTp6UA7"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1747,7 +1763,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1843,7 +1859,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1884,7 +1900,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1915,7 +1931,7 @@
           "height": 241
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2012,7 +2028,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2034,7 +2050,7 @@
       "metadata": {
         "id": "x7er9S3S_oR5"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2050,7 +2066,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2101,7 +2117,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2152,7 +2168,7 @@
           "height": 444
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2759,7 +2775,7 @@
         },
         "outputId": "afb9c4b3-baf2-4391-f06b-eb2defcbb6b4"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2793,7 +2809,7 @@
         },
         "outputId": "ad4ff9b6-b123-459c-9644-bcf6e79830bc"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2823,7 +2839,7 @@
           "height": 244
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3348,7 +3364,7 @@
           "height": 244
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3873,7 +3889,7 @@
       "metadata": {
         "id": "cP6FfP4F47jE"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3886,7 +3902,7 @@
       "metadata": {
         "id": "vAsoiEcSJf2P"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3910,7 +3926,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3941,7 +3957,7 @@
       "metadata": {
         "id": "tpKFzbCbJ6bF"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3959,7 +3975,7 @@
       "metadata": {
         "id": "CRHEIxKeObkc"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3974,7 +3990,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4013,7 +4029,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4050,7 +4066,7 @@
           "height": 449
         }
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4072,7 +4088,7 @@
       "metadata": {
         "id": "b15jt8IPQ51C"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4087,7 +4103,7 @@
         },
         "outputId": "a4b7ac7b-2a2d-4e88-b581-6a52cf64c659"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4117,7 +4133,7 @@
           "height": 178
         }
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4186,7 +4202,7 @@
           "height": 455
         }
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4213,7 +4229,7 @@
       "metadata": {
         "id": "R6TqTlwGCbz0"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4232,7 +4248,7 @@
           "height": 728
         }
       },
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4265,7 +4281,7 @@
       "metadata": {
         "id": "Vls-tqe35-eT"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4278,7 +4294,7 @@
       "metadata": {
         "id": "aZO9mkCD66ZR"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4294,7 +4310,7 @@
           "height": 300
         }
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4623,7 +4639,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4644,7 +4660,7 @@
       "metadata": {
         "id": "YRQPGmYI9dbK"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4659,7 +4675,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4689,7 +4705,7 @@
           "height": 449
         }
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4715,7 +4731,7 @@
       "metadata": {
         "id": "fgUAATCy9wCp"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4741,7 +4757,7 @@
           "height": 472
         }
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4792,7 +4808,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4845,7 +4861,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4875,7 +4891,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4910,7 +4926,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4957,7 +4973,7 @@
       "metadata": {
         "id": "HJbQ59JPA9B0"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4976,7 +4992,7 @@
           "height": 728
         }
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
